MediaWiki Core - Sprache "de" überarbeitet
 "Oversighter" durch "Aufseher" ersetzt

--- a/languages/i18n/de.json
+++ b/languages/i18n/de.json
@@ -1311,7 +1311,7 @@
 	"group-sysop": "Administratoren",
 	"group-interface-admin": "Oberflächenadministratoren",
 	"group-bureaucrat": "Bürokraten",
-	"group-suppress": "Oversighter",
+	"group-suppress": "Aufseher",
 	"group-all": "(alle)",
 	"group-user-member": "{{GENDER:$1|Benutzer|Benutzerin}}",
 	"group-autoconfirmed-member": "{{GENDER:$1|Automatisch bestätigter Benutzer|Automatisch bestätigte Benutzerin}}",
@@ -1319,7 +1319,7 @@
 	"group-sysop-member": "{{GENDER:$1|Administrator|Administratorin}}",
 	"group-interface-admin-member": "{{GENDER:$1|Oberflächenadministrator|Oberflächenadministratorin}}",
 	"group-bureaucrat-member": "{{GENDER:$1|Bürokrat|Bürokratin}}",
-	"group-suppress-member": "{{GENDER:$1|Oversighter|Oversighterin}}",
+	"group-suppress-member": "{{GENDER:$1|Aufseher|Aufseherrin}}",
 	"grouppage-user": "{{ns:project}}:Benutzer",
 	"grouppage-named": "{{ns:project}}:Angemeldete Benutzer",
 	"grouppage-autoconfirmed": "{{ns:project}}:Automatisch bestätigte Benutzer",
